@@ -3,13 +3,11 @@ package wres.metrics.singlevalued;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.DoubleUnaryOperator;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.tuple.Pair;
 
 import wres.datamodel.statistics.BoxplotStatisticOuter;
 import wres.metrics.Diagram;
-import wres.metrics.FunctionFactory;
 import wres.datamodel.Slicer;
 import wres.config.MetricConstants;
 import wres.datamodel.pools.Pool;
@@ -46,7 +44,7 @@ public class BoxPlotError extends Diagram<Pool<Pair<Double, Double>>, BoxplotSta
      * Function for rounding the errors.
      */
 
-    private static final DoubleUnaryOperator ROUNDER = v -> FunctionFactory.round().apply( v, 8 );
+    private static final DoubleUnaryOperator ROUNDER = Slicer.rounder( 8 );
 
     /**
      * The canonical representation of the metric.
@@ -109,7 +107,7 @@ public class BoxPlotError extends Diagram<Pool<Pair<Double, Double>>, BoxplotSta
                                 .map( Slicer.getQuantileFunction( sortedErrors ) )
                                 .map( BoxPlotError.ROUNDER )
                                 .boxed()
-                                .collect( Collectors.toList() );
+                                .toList();
 
         BoxplotStatistic statistic = builder.addStatistics( Box.newBuilder().addAllQuantiles( box ) )
                                             .build();
